Comentamos los documentos html y añadimos animaciones finales

--- a/carta.css
+++ b/carta.css
@@ -137,6 +137,22 @@ li:hover > ul {
   text-align: center;
 }
 
+.recuadro {
+  animation-duration: 2s;
+  animation-name: aparecer-izquierda;
+}
+
+@keyframes aparecer-izquierda {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -152,6 +168,19 @@ tbody td {
   padding: 10px;
 }
 
+table {
+  animation-duration: 5s;
+  animation-name: aparecer;
+}
+
+@keyframes aparecer {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .Derechos {
   background-color: #c7a17a;
   height: 60px;
