--- a/indexstyle.css
+++ b/indexstyle.css
@@ -15,6 +15,20 @@ nav {
   margin-left: 34px;
 }
 
+.imagen-cafe img {
+  animation-duration: 5s;
+  animation-name: aparecer;
+}
+
+@keyframes aparecer {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .barra-navegacion {
   width: 100%;
 }
@@ -55,6 +69,23 @@ a:hover {
   font-family: Arial, sans-serif;
   text-align: center;
 }
+
+.recuadro {
+  animation-duration: 2s;
+  animation-name: aparecer-izquierda;
+}
+
+@keyframes aparecer-izquierda {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 
 .Derechos {
   background-color: #c7a17a;
