--- a/nuestroslocales.css
+++ b/nuestroslocales.css
@@ -17,6 +17,20 @@ nav {
   margin-left: 34px;
 }
 
+.imagen-cafe img {
+  animation-duration: 5s;
+  animation-name: aparecer;
+}
+
+@keyframes aparecer {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .barra-navegacion {
   width: 100%;
 }
@@ -61,6 +75,19 @@ a:hover {
 
 }
 
+.recuadro{
+  animation-duration: 4s;
+  animation-name: aparecer;
+}
+
+@keyframes aparecer {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 li ul {
   display: none;
   position: absolute;
