--- a/reservas.css
+++ b/reservas.css
@@ -120,7 +120,21 @@ li:hover > ul {
     color: rgb(255, 255, 255);
     font-weight: bold;
   }
-
+  #titulo h2 {
+    animation-duration: 2s;
+    animation-name: aparecer-izquierda;
+  }
+  
+  @keyframes aparecer-izquierda {
+    from {
+      transform: translateX(-60%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(70);
+      opacity: 1;
+    }
+  }
 
   .recuadro-formulario {
     border: 4px solid rgb(0, 0, 0);
